# libczi

./: .editorconfig  .gitignore  .mega-linter.yml  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CPPLINT.cfg  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  cla_corporate.txt  cla_individual.txt  opencppcoverage.txt
.atomineer/: Prefs.xml
Src/: CMakeLists.txt  Doxyfile  Doxyfile.bak
Src/CZICmd/: BitmapGen.cpp  BitmapGenFreeType.cpp  BitmapGenFreeType.h  BitmapGenGdiplus.cpp  BitmapGenGdiplus.h  BitmapGenNull.cpp  BitmapGenNull.h  CMakeLists.txt  CZIcmd.cpp  CZIcmd.ico.license  CZIcmd.manifest  CZIcmd.manifest.license  CZIcmd.rc  CZIcmd_Config.h.in  DisplaySettingsHelper.h  IBitmapGen.h  SaveBitmap.cpp  SaveBitmap.h  cmdlineoptions.cpp  cmdlineoptions.h  consoleio.cpp  consoleio.h  execute.cpp  execute.h  executeBase.cpp  executeBase.h  executeCreateCzi.cpp  executeCreateCzi.h  executePlaneScan.cpp  executePlaneScan.h  executeReadWriteCzi.cpp  executeReadWriteCzi.h  getOpt.cpp  getOpt.h  inc_CZIcmd_Config.h  inc_libCZI.h  inc_rapidjson.h  platform_defines.h  resource_data.h.in  stdafx.cpp  (+6 more)
Src/JxrDecode/: CMakeLists.txt  JxrDecode.cpp  JxrDecode.h  JxrDecode2.cpp  JxrDecode2.h  JxrDecode_Config.h.in  stdafx.cpp  stdafx.h  targetver.h
Src/JxrDecode/Jxr/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGluePFC.c  JXRMeta.c  JXRMeta.h  JXRTest.c  JXRTest.h  JXRTestBmp.c  JXRTestHdr.c  JXRTestPnm.c  JXRTestTif.c  JXRTestWrapper.c  JXRTestWrapper.h  adapthuff.c  common.h  decode.c  encode.c  image.c  perfTimer.h  priv_guiddef.h  segdec.c  segenc.c  strPredQuantDec.c  strcodec.c  strdec.c  strenc.c  windowsmediaphoto.h  wmspecstring.h  wmspecstrings_adt.h  wmspecstrings_strict.h
Src/JxrDecode/jxrlib/common/include/: guiddef.h  jxrlib_symbol_mangle.h  log.h  wmspecstring.h  wmspecstrings_adt.h
Src/JxrDecode/jxrlib/common/src/: log.c
Src/JxrDecode/jxrlib/image/decode/: JXRTranscode.c  decode.c  decode.h  postprocess.c  segdec.c  strInvTransform.c  strPredQuantDec.c  strdec.c
Src/JxrDecode/jxrlib/jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGluePFC.c  JXRMeta.c  JXRMeta.h
Src/StreamsLib/: CMakeLists.txt
Src/StreamsLib/include/: include_libczi.h  streamsFactory.h
Src/StreamsLib/src/: curlhttpinputstream.cpp  curlhttpinputstream.h  streamsFactory.cpp
Src/jpgxrdecodetest/: CMakeLists.txt  main.cpp  save_bitmap.cpp  save_bitmap.h
Src/libCZI/: BitmapOperations.cpp  BitmapOperations.h  BitmapOperations.hpp  BitmapOperationsBitonal.cpp  BitmapOperationsBitonal.h  CMakeLists.txt  CZIReader.cpp  CZIReader.h  CreateBitmap.cpp  CziAttachment.cpp  CziAttachment.h  CziAttachmentsDirectory.cpp  CziAttachmentsDirectory.h  CziDimensionInfo.cpp  CziDimensionInfo.h  CziDisplaySettings.cpp  CziDisplaySettings.h  CziMetadata.cpp  CziMetadata.h  CziMetadataBuilder.cpp  CziMetadataBuilder.h  CziMetadataDocumentInfo.cpp  CziMetadataDocumentInfo.h  CziMetadataDocumentInfo2.cpp  CziMetadataDocumentInfo2.h  CziMetadataSegment.cpp  CziMetadataSegment.h  CziParse.cpp  CziParse.h  CziReaderCommon.cpp  CziReaderCommon.h  CziReaderWriter.cpp  CziReaderWriter.h  CziStructs.cpp  CziStructs.h  CziSubBlock.cpp  CziSubBlock.h  CziSubBlockDirectory.cpp  CziSubBlockDirectory.h  CziUtils.cpp  (+78 more)
Src/libCZI/Doc/: CZICmd_usage.markdown  building_libCZI.markdown  coordinate_systems.markdown  mainpage.markdown  resolution_protocol.markdown  stream_objects.markdown  using_libCZI.markdown  version-history.markdown  write_czi.markdown
Src/libCZI/StreamsLib/: azureblobinputstream.cpp  azureblobinputstream.h  curlhttpinputstream.cpp  curlhttpinputstream.h  preadfileinputstream.cpp  preadfileinputstream.h  simplefileinputstream.cpp  simplefileinputstream.h  streamsFactory.cpp  uwpfileinputstream.cpp  uwpfileinputstream.h  windowsfileinputstream.cpp  windowsfileinputstream.h
Src/libCZI/cmake/: libCZIConfig.cmake.in  libcziConfig.cmake.in
Src/libCZI/inc/: ImportExport.h  libCZI_Compositor.h  libCZI_Site.h  libCZI_StreamsLib.h  libCZI_exceptions.h
Src/libCZI/include/: libCZI_DimCoordinate.h  libCZI_Metadata.h  libCZI_ReadWrite.h
Src/libCZIAPI/: CMakeLists.txt  Doxyfile
Src/libCZIAPI/inc/: MetadataAsXml_struct.h  ObjectHandles.h  accessor_options_interop.h  add_attachment_info_interop.h  add_subblock_info_interop.h  attachment_info_interop.h  bitmap_structs.h  composition_channel_info_interop.h  errorcodes.h  external_input_stream_struct.h  external_output_stream_struct.h  external_stream_error_information_struct.h  fileheader_info_interop.h  importexport.h  inputstream_class_info_struct.h  libCZIApi.h  misc_types.h  reader_open_info_struct.h  scaling_info_interop.h  subblock_info_interop.h  subblock_statistics_struct.h  versioninfo_structs.h  write_metadata_info_interop.h
Src/libCZIAPI/src/: Doxyfile  libCZIApi.cpp  parameterhelpers.cpp  parameterhelpers.h  sharedptrwrapper.h  utils.cpp  utils.h
Src/libCZIAPI_UnitTests/: CMakeLists.txt  MemoryInputStream.cpp  MemoryInputStream.h  MemoryOutputStream.cpp  MemoryOutputStream.h  SimpleBitmap.h  main.cpp  test_CZIReader.cpp  test_accessors.cpp  test_misc.cpp  test_parameterhelpers.cpp  testdata.cpp  testdata.h  utilities.cpp  utilities.h
Src/libCZI_UnitTests/: CMakeLists.txt  CMakeLists.txt.in  MemInputOutputStream.cpp  MemInputOutputStream.h  MemOutputStream.cpp  MemOutputStream.h  MockMetadataSegment.cpp  MockMetadataSegment.h  SegmentWalker.cpp  SegmentWalker.h  inc_libCZI.h  include_gtest.h  main.cpp  pch.cpp  pch.h  testImage.h  testImage1.cpp  testImageHiLo.cpp  test_Accessors.cpp  test_CZIParse.cpp  test_CziSubBlockDirectory.cpp  test_DimCoordinate.cpp  test_DisplaySettings.cpp  test_IndexSet.cpp  test_JxrDecode.cpp  test_JxrlibCodec.cpp  test_LUT.cpp  test_SingleChannelTileAccessor.cpp  test_StreamImplementations.cpp  test_SubBlockCache.cpp  test_TileAccessorCoverageOptimization.cpp  test_Utilities.cpp  test_ZstdCompress.cpp  test_ZstdDecode.cpp  test_azureblobstream.cpp  test_bitmapOperations.cpp  test_curlhttpstream.cpp  test_frame_of_reference_transform.cpp  test_maskawarecomposition.cpp  test_metadatabuilder.cpp  (+13 more)
(+111 files in other folders)
